# Book-Store-Management

./: .gitignore  FRONTEND_GUIDE.md  README.md  pyproject.toml  requirements.txt  test_api.py  test_rate_limit.py
src/: main.py
src/api/: README.md  admin.py  auth.py  books.py  deps.py  favourites.py  requisitions.py  reviews.py  sales.py  users.py
src/core/: README.md  config.py  security.py
src/db/: README.md  database.py
src/models/: README.md  book.py  interaction.py  requisition.py  user.py
src/schemas/: README.md  book.py  interaction.py  user.py
