[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.11.0",
    "python-multipart>=0.0.22",
    "bcrypt<4.0.0",
    "python-jose[cryptography]>=3.5.0",
    "httpx>=0.28.1",
    "slowapi>=0.1.9",
    "fastapi-cache2>=0.2.2",
]
